# c-cmake

./: CMakeLists.txt  README.md  linux-cmake.sh
linux/: CMakeLists.txt
linux/include/1-base/: 1-2-myinfor.h  1-3-myerror.h  1-print.h
linux/source/: linux.c
md/: run.md  version.md
md/1-base/: 1-1-print-color.md  1-4-picture-file-synthesizer.md  1-8-ntp.md  print-color.md
md/ut/: ut.md
windows/: CMakeLists.txt
windows/exe/: test_conf.conf  test_hello.conf
windows/include/1-base/: 1-1-print.h  1-2-myinfor.h  1-3-myerror.h  1-4-log.h  1-4-pfy.h  1-5-student.h  1-5-time.h  1-6-num.h  1-7-ip.h  1-7-str.h  1-8-ntp.h  1-print.h
windows/include/3-leetcode/: 3-1-leetcode.h
windows/source/: windows.c
windows/source/1-base/: 1-4-log.c  1-4-picture-file-synthesizer.c  1-5-student.c  1-5-time.c  1-6-num.c  1-7-ip.c  1-7-str.c  1-8-ntp.c
windows/source/3-leetcode/: 3-1-run.c  3-leetcode1.c
